# sd-climate-action

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: refresh.yml
api/: main.py  mcp_server.py  models.py  queries.py
dashboard/: app.py
data/aggregated/: approval_speed.parquet  climate_permits_monthly.parquet  energy_by_zip_annual.parquet  energy_permits_annual.parquet  energy_trends.parquet  solar_annual.parquet  solar_by_zip.parquet  solar_map_points.parquet  zip_code_summary.parquet
data/processed/: energy_consumption.parquet
pipeline/: build.py  ingest.py  transform.py
