[project]
name = "sd-climate-action"
version = "0.1.0"
description = "San Diego Climate Action Plan progress: solar adoption, permit expediting, energy trends"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "streamlit>=1.40",
    "plotly>=5.18",
    "pyarrow>=17.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastmcp>=2.12",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydeck>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "api", "dashboard"]

[project.scripts]
climate-build = "pipeline.build:main"
climate-mcp = "api.mcp_server:main"
